# rust-cli-tic-tac-toe

./: .gitignore  README.md
tic_tac_toe_cli/: Cargo.toml
tic_tac_toe_cli/src/: front_end.rs  game_settings_rules.rs  game_state.rs  inputs.rs  lib.rs  main.rs  outputs.rs
tic_tac_toe_lib/: Cargo.toml
tic_tac_toe_lib/src/: game.rs  game_state.rs  lib.rs  setting_rules.rs  settings.rs  state_calculation.rs
tic_tac_toe_lib/src/types/: board.rs  board_dimension.rs  board_move.rs  cell_value.rs  errors.rs  mod.rs  player_mark.rs
