[package]
name = "tic_tac_toe_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# package name will be used to get to this
path = "src/lib.rs"

# bin target, name of the executable
[[bin]]
path = "src/main.rs"
name = "tic_tac_toe_cli_app"

[dependencies]
tic_tac_toe_lib = { path = "../tic_tac_toe_lib" }
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
colored = "2"